# tinyfluids

./: README.md  pyproject.toml  scaling_jax.py  scaling_jax_57281.out  scaling_jax_57440.err  scaling_jax_57440.out  scaling_jax_sharding.py  shard_tests.py  sharding_helpers.py  test.py  test_scaling.sh
results/: scaling_data.npz  scaling_data_shard_mapped.npz  scaling_data_sharding.npz
tinyfluids/jax-tinyfluids/: baseline.py
tinyfluids/jax_tinyfluids/: __init__.py  fluid.py  jax_baseline.py  jax_shardmap.py  jax_tinyfluids.py  sharding_helpers.py  time_integration.py
