[tool.poetry]
name = "tinyfluids"
version = "0.0.1"
description = "tiny fluid dynamics codes for multi-gpu testing"
authors = ["Leonard Storcks"]
readme = "README.md"
packages = [{include = "tinyfluids"}]

[tool.poetry.dependencies]
python = ">=3.9"
jax = ">=0.4.0"
beartype = ">=0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"